// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`breadcrumb component > should hide root label when hideRootLabel is true 1`] = `
<DocumentFragment>
  <nav
    class=""
  >
    <ol
      class="_breadcrumb__list_1jn0o_2"
    >
      <li
        class="_breadcrumb-item_vrq54_2"
      >
        <a
          class="_link_udbet_2"
          href="/:id"
        >
          vRack service
        </a>
        <span
          class="_breadcrumb-separator_1arog_11"
          role="presentation"
        />
      </li>
      <li
        class="_breadcrumb-item_vrq54_2"
      >
        <span
          aria-current="page"
          href="/:id/listing"
        >
          vRack service listing
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`breadcrumb component > should render 3 breadcrumb items when hideRootLabel is false 1`] = `
<DocumentFragment>
  <nav
    class=""
  >
    <ol
      class="_breadcrumb__list_1jn0o_2"
    >
      <li
        class="_breadcrumb-item_vrq54_2"
      >
        <a
          class="_link_udbet_2"
          href="/"
        >
          vRack services
        </a>
        <span
          class="_breadcrumb-separator_1arog_11"
          role="presentation"
        />
      </li>
      <li
        class="_breadcrumb-item_vrq54_2"
      >
        <a
          class="_link_udbet_2"
          href="/:id"
        >
          vRack service
        </a>
        <span
          class="_breadcrumb-separator_1arog_11"
          role="presentation"
        />
      </li>
      <li
        class="_breadcrumb-item_vrq54_2"
      >
        <span
          aria-current="page"
          href="/:id/listing"
        >
          vRack service listing
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`breadcrumb component > should render 3 breadcrumb items when hideRootLabel is not provided 1`] = `
<DocumentFragment>
  <nav
    class=""
  >
    <ol
      class="_breadcrumb__list_1jn0o_2"
    >
      <li
        class="_breadcrumb-item_vrq54_2"
      >
        <a
          class="_link_udbet_2"
          href="/"
        >
          vRack services
        </a>
        <span
          class="_breadcrumb-separator_1arog_11"
          role="presentation"
        />
      </li>
      <li
        class="_breadcrumb-item_vrq54_2"
      >
        <a
          class="_link_udbet_2"
          href="/:id"
        >
          vRack service
        </a>
        <span
          class="_breadcrumb-separator_1arog_11"
          role="presentation"
        />
      </li>
      <li
        class="_breadcrumb-item_vrq54_2"
      >
        <span
          aria-current="page"
          href="/:id/listing"
        >
          vRack service listing
        </span>
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
